content(about): add Who Am I bio section
issue : #5

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     <a href="#projects" class="cta">View My Work</a>
   </section>
 
+  <!-- ABOUT (#5) -->
+<section id="about" class="about">
+  <h2>Who Am I ?</h2>
+  <p>
+    I’m Jeremy Wanjohi, a fourth-year CS student at Strathmore University
+    passionate about front-end development and data science.
+    When I’m not coding , you’ll find me crunching
+    football stats for Liverpool FC. 🚀
+  </p>
+</section>
+
+
   <!-- placeholders, needed later -->
   <section id="projects" class="placeholder"><h2>Projects</h2></section>
   <section id="contact"  class="placeholder"><h2>Contact</h2></section>
