feat(projects): add responsive project cards
issue : #6

--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
 
 
   <!-- placeholders, needed later -->
-  <section id="projects" class="placeholder"><h2>Projects</h2></section>
+  <!-- PROJECTS (#6) -->
+<section id="projects" class="projects">
+  <h2>Projects</h2>
+
+  <div class="card-grid">
+    <article class="card">
+      <h3>EcoLocator 🌱</h3>
+      <p>Helps Nairobi residents find nearby recycling centres and earn
+         rewards for eco-friendly habits.</p>
+    </article>
+
+    <article class="card">
+      <h3>ImpactNow 🤝</h3>
+      <p>Mobile app that matches students with volunteering
+         opportunities, making community service easy.</p>
+    </article>
+
+    <article class="card">
+      <h3>Smart Traffic AI 🚦</h3>
+      <p>Deep-RL model that reduced simulated junction wait times
+         in Nairobi by 70 %.</p>
+    </article>
+  </div>
+</section>
+
   <section id="contact"  class="placeholder"><h2>Contact</h2></section>
   <script>
   const btn=document.getElementById('nav-toggle');
