perf(polish): compress hero & project images
issue:#11

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jeremy Wanjohi • Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header class="nav">
@@ -24,7 +24,11 @@
     <div id="toast" role="status" aria-live="polite"></div>
 
 
+
   <!-- HERO (#2) -->
+   <!-- hero background -->
+ <section id="home" class="hero" style="background:url('assets/hero.jpg') center/cover;">
+
   <section id="home" class="hero">
     <h1>Hi, I’m Jeremy 👋</h1>
     <p>CS student • Front-end dev • Tech enthusiast</p>
