docs(about): swap wording to football analytics (#26)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         I’m a final-year computer-science student at Strathmore University.  
         I like turning ideas into clean, fast user interfaces and making data easy
         to understand. Away from the keyboard I’m usually traveling, trying new
-        things, or digging into English Premier League stats for fun.
+        things, or digging into English Premier League stats for Liverpool FC.
       </p>
 
     </div>
