feat: branch edit that will conflict

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <li><i class="fab fa-react"></i><span>React & React Native</span></li>
       <li><i class="fas fa-database"></i><span>MySQL / PostgreSQL</span></li>
       <li><i class="fas fa-chart-line"></i><span>Data Viz (Power BI)</span></li>
-      <li><i class="fas fa-robot"></i><span>ML / Python )</span></li>
+      <li><i class="fas fa-robot"></i><span>ML / Python (SUMO)  </span></li>
     </ul>
   </section>
 
